Move bookmark status into its own ViewModel controlled by the activity and integrate a bottom app bar with a floating action button to manage bookmark status. Auto-hide the top toolbar on scroll in event details screens Remove legacy UnderlinePageIndicator. Swiping is still possible.

--- a/app/src/main/res/layout-sw600dp-land/track_schedule.xml
+++ b/app/src/main/res/layout-sw600dp-land/track_schedule.xml
@@ -18,7 +18,7 @@
         style="@style/Toolbar.Fosdem"
         android:layout_width="match_parent"
         android:layout_height="128dp"
-        android:elevation="4dp"
+        android:elevation="@dimen/toolbar_elevation"
         android:gravity="top" />
 
     <androidx.cardview.widget.CardView
@@ -36,15 +36,12 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
+        style="@style/FloatingActionButton.BookmarkStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/detail_fab_margin_end"
         android:layout_marginRight="@dimen/detail_fab_margin_end"
-        android:contentDescription="@string/add_bookmark"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
-        app:fabSize="normal"
         app:layout_anchor="@+id/toolbar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_bookmark_outline_white_24dp" />
+        app:layout_anchorGravity="bottom|end" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
