--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,9 @@
     <dimen name="main_menu_footer_height">32dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
     <dimen name="content_margin">16dp</dimen>
-    <dimen name="toolbar_elevation">8dp</dimen>
+    <dimen name="toolbar_elevation">4dp</dimen>
     <dimen name="schedule_column_width">360dp</dimen>
+    <dimen name="detail_bottom_padding">12dp</dimen>
     <dimen name="detail_card_view_elevation">6dp</dimen>
     <!-- Enlarge the card view by 6dp left & right and 9dp top & bottom
          to compensate for the compatibility padding of the elevation -->
