Migrate all themes and styles to Material Components Update Material Components library to 1.1.0-beta01

--- a/app/src/main/res/drawable/activated_background.xml
+++ b/app/src/main/res/drawable/activated_background.xml
@@ -3,7 +3,7 @@
 
     <item android:state_activated="true">
         <shape>
-            <solid android:color="@color/fosdem_blue_translucent"/>
+            <solid android:color="@color/color_activated"/>
         </shape>
     </item>
     <item android:drawable="@android:color/transparent"/>
