--- a/app/src/main/res/values-ldrtl/styles.xml
+++ b/app/src/main/res/values-ldrtl/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Widget.Fixed.CollapsingToolbar" parent="Widget.Design.CollapsingToolbar">
+    <style name="Widget.Fosdem.CollapsingToolbar" parent="Widget.Design.CollapsingToolbar">
         <item name="collapsedTitleGravity">right|center_vertical</item>
         <item name="expandedTitleGravity">right|bottom</item>
     </style>
