--- a/app/src/main/res/drawable/fastscroll_thumb_material_light.xml
+++ b/app/src/main/res/drawable/fastscroll_thumb_material_light.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/color_accent" />
+            <solid android:color="@color/color_secondary" />
             <size android:width="8dp" android:height="48dp" />
         </shape>
     </item>
