--- a/app/src/main/res/layout/fragment_event_details.xml
+++ b/app/src/main/res/layout/fragment_event_details.xml
@@ -26,7 +26,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:textAlignment="viewStart"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+                android:textAppearance="?textAppearanceHeadline5"
                 android:textIsSelectable="true"
                 tools:text="Welcome to FOSDEM"/>
 
@@ -36,7 +36,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:textAlignment="viewStart"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textAppearance="?textAppearanceSubtitle1"
                 android:textIsSelectable="true"
                 tools:text="An introduction to your favourite Free Software meeting"/>
 
@@ -48,7 +48,7 @@
                 android:gravity="start"
                 android:saveEnabled="false"
                 android:textAlignment="viewStart"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textAppearance="?textAppearanceSubtitle2"
                 tools:text="FOSDEM Staff"/>
 
             <View
@@ -56,20 +56,11 @@
                 android:layout_marginTop="8dp"/>
 
             <TextView
-                android:id="@+id/track"
-                style="@style/Metadata"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:drawableLeftCompat="@drawable/ic_local_offer_grey600_18dp"
-                app:drawableStartCompat="@drawable/ic_local_offer_grey600_18dp"
-                tools:text="Keynotes" />
-
-            <TextView
                 android:id="@+id/time"
                 style="@style/Metadata"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 app:drawableLeftCompat="@drawable/ic_access_time_grey600_18dp"
                 app:drawableStartCompat="@drawable/ic_access_time_grey600_18dp"
                 tools:text="Day 1 (Saturday), 09:30 - 09:55" />
@@ -95,7 +86,7 @@
                 android:paddingRight="0dp"
                 android:saveEnabled="false"
                 android:textAlignment="viewStart"
-                android:textAppearance="@style/TextAppearance.AppCompat.Button"
+                android:textAppearance="?textAppearanceButton"
                 tools:text="Open"/>
 
         </LinearLayout>
@@ -104,10 +95,10 @@
             android:id="@+id/abstract_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/translucent_grey"
+            android:background="@color/abstract_background"
             android:padding="@dimen/content_margin"
             android:saveEnabled="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textAppearance="?textAppearanceBody1"
             android:textIsSelectable="true"
             tools:text="FOSDEM welcome and opening talk."/>
 
@@ -117,7 +108,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/content_margin"
             android:saveEnabled="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textAppearance="?textAppearanceBody2"
             android:textIsSelectable="true"
             tools:text="Welcome to FOSDEM 2015!"/>
 
