--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,40 +3,41 @@
 
     <!-- Main theme -->
 
-    <style name="Base.AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Base.AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <!-- Allows the action mode icons to be shown on top of the Toolbar -->
+        <item name="windowActionModeOverlay">true</item>
+
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
-        <item name="colorAccent">@color/color_accent</item>
+        <item name="colorSecondary">@color/color_secondary</item>
+        <item name="colorOnPrimary">@color/design_default_color_on_primary</item>
+        <item name="colorOnSecondary">@color/design_default_color_on_primary</item>
+        <item name="colorError">@color/color_error</item>
         <item name="alertDialogTheme">@style/AlertDialogTheme</item>
         <item name="android:windowContentOverlay">@null</item>
 
         <item name="activatedBackgroundIndicator">@drawable/activated_background</item>
+        <item name="toolbarStyle">@style/Widget.Fosdem.Toolbar</item>
+        <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout.Colored</item>
         <item name="recyclerViewStyle">@style/RecyclerView</item>
         <item name="materialHorizontalProgressBarStyle">@style/Widget.MaterialHorizontalProgressBar</item>
     </style>
 
     <style name="AppTheme" parent="Base.AppTheme">
         <item name="android:selectableItemBackground">?attr/selectableItemBackground</item>
-        <item name="android:listChoiceBackgroundIndicator">?attr/listChoiceBackgroundIndicator
-        </item>
-        <!-- Material padding fix -->
-        <item name="android:listPreferredItemPaddingStart" tools:targetApi="jelly_bean_mr1">?android:attr/listPreferredItemPaddingLeft</item>
-        <item name="android:listPreferredItemPaddingEnd" tools:targetApi="jelly_bean_mr1">?android:attr/listPreferredItemPaddingRight</item>
+        <item name="android:listChoiceBackgroundIndicator">?attr/listChoiceBackgroundIndicator</item>
     </style>
 
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <!-- Allows the action mode icons to be shown on top of the Toolbar -->
-        <item name="windowActionModeOverlay">true</item>
-    </style>
+    <style name="AppTheme.WindowDrawsSystemBarBackgrounds" />
 
-    <style name="AppTheme.NoActionBar.WindowDrawsSystemBarBackgrounds"/>
-
-    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+    <style name="AlertDialogTheme" parent="Theme.MaterialComponents.Light.Dialog.Alert">
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
-        <item name="colorAccent">@color/color_accent</item>
+        <item name="colorSecondary">@color/color_secondary</item>
+        <item name="colorOnPrimary">@color/design_default_color_on_primary</item>
+        <item name="colorOnSecondary">@color/design_default_color_on_primary</item>
     </style>
 
     <style name="AlertDialogTheme.NoActionBar">
@@ -44,13 +45,16 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Toolbar.Fosdem" parent="Widget.AppCompat.Toolbar">
-        <item name="android:background">?attr/colorPrimary</item>
-        <item name="popupTheme">@style/ThemeOverlay.AppCompat.Light</item>
-        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+    <style name="Widget.Fosdem.Toolbar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="popupTheme">?actionBarPopupTheme</item>
     </style>
 
-    <style name="Widget.Fixed.CollapsingToolbar" parent="Widget.Design.CollapsingToolbar" />
+    <style name="Widget.Fosdem.Toolbar.Primary" parent="Widget.MaterialComponents.Toolbar.Primary">
+        <item name="android:elevation" tools:ignore="NewApi,PrivateResource">@dimen/design_appbar_elevation</item>
+        <item name="android:theme">?actionBarTheme</item>
+    </style>
+
+    <style name="Widget.Fosdem.CollapsingToolbar" parent="Widget.Design.CollapsingToolbar" />
 
     <style name="Widget.MaterialHorizontalProgressBar" parent="Widget.AppCompat.ProgressBar.Horizontal">
         <!-- Will be set in code -->
@@ -64,16 +68,9 @@
         <item name="android:scrollbars">vertical</item>
     </style>
 
-    <style name="Tabs" parent="Widget.Design.TabLayout">
-        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
-        <item name="android:background">?attr/colorPrimary</item>
-        <item name="tabIndicatorColor">@android:color/white</item>
-    </style>
-
-    <style name="FloatingActionButton.BookmarkStatus" parent="Widget.Design.FloatingActionButton">
+    <style name="FloatingActionButton.BookmarkStatus" parent="Widget.MaterialComponents.FloatingActionButton">
         <item name="android:contentDescription">@string/add_bookmark</item>
         <item name="android:enabled">false</item>
-        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark</item>
         <item name="fabSize">normal</item>
         <item name="srcCompat">@drawable/asld_bookmark_24dp</item>
     </style>
@@ -85,8 +82,9 @@
     </style>
 
     <style name="Metadata">
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Subhead</item>
-        <item name="android:textColor">#666666</item>
+        <item name="android:textAppearance">?textAppearanceSubtitle1</item>
+        <item name="android:textColor">?android:textColorSecondary</item>
+        <item name="drawableTint">?android:textColorSecondary</item>
         <item name="android:gravity">start|center_vertical</item>
         <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">viewStart</item>
         <item name="android:drawablePadding">8dp</item>
@@ -97,7 +95,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:textSize">20sp</item>
-        <item name="android:textColor">@color/color_primary</item>
+        <item name="android:textColor">?colorPrimary</item>
         <item name="android:gravity">start</item>
         <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">viewStart</item>
     </style>
