--- a/app/src/main/res/layout-sw600dp-land/track_schedule.xml
+++ b/app/src/main/res/layout-sw600dp-land/track_schedule.xml
@@ -15,7 +15,7 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
-        style="@style/Widget.Fosdem.Toolbar.Primary"
+        style="@style/Widget.App.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="128dp"
         android:gravity="top" />
