--- a/app/src/main/res/layout/content.xml
+++ b/app/src/main/res/layout/content.xml
@@ -6,7 +6,7 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
-        style="@style/Widget.Fosdem.Toolbar.Primary"
+        style="@style/Widget.App.Toolbar.Primary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
