--- a/app/src/main/res/menu/room_image_dialog.xml
+++ b/app/src/main/res/menu/room_image_dialog.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation"
-        android:icon="@drawable/ic_navigation_grey600_24dp"
+        android:icon="@drawable/ic_navigation_white_24dp"
         android:title="@string/navigation"
-        app:showAsAction="ifRoom"/>
+        app:iconTint="?colorControlNormal"
+        app:showAsAction="ifRoom" />
 
 </menu>
