--- a/app/src/main/res/menu/bookmarks.xml
+++ b/app/src/main/res/menu/bookmarks.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/filter"
@@ -10,13 +10,14 @@
             <item
                 android:id="@+id/upcoming_only"
                 android:checkable="true"
-                android:title="@string/upcoming_only"/>
+                android:title="@string/upcoming_only" />
         </menu>
     </item>
     <item
         android:id="@+id/export_bookmarks"
         android:icon="@drawable/ic_file_upload_white_24dp"
         android:title="@string/export_bookmarks"
-        app:showAsAction="ifRoom"/>
+        app:iconTint="?colorControlNormal"
+        app:showAsAction="ifRoom" />
 
 </menu>
