--- a/app/src/main/res/menu/event.xml
+++ b/app/src/main/res/menu/event.xml
@@ -6,11 +6,13 @@
         android:id="@+id/share"
         android:icon="@drawable/ic_share_white_24dp"
         android:title="@string/share"
+        app:iconTint="?colorControlNormal"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/add_to_agenda"
         android:icon="@drawable/ic_event_add_white_24dp"
         android:title="@string/add_to_agenda"
+        app:iconTint="?colorControlNormal"
         app:showAsAction="ifRoom" />
 
 </menu>
