--- a/app/src/main/res/menu/bookmarks.xml
+++ b/app/src/main/res/menu/bookmarks.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/filter"
         android:title="@string/filter"
+        app:iconTint="?colorControlNormal"
         app:showAsAction="ifRoom">
         <menu>
             <item
