--- a/app/src/main/res/layout/track_schedule.xml
+++ b/app/src/main/res/layout/track_schedule.xml
@@ -8,7 +8,7 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
-        style="@style/Widget.App.Toolbar.Primary"
+        style="@style/Widget.App.Toolbar.PrimarySurface"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
