--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Constants -->
+    <color name="shortcut_background">#f5f5f5</color>
+    <color name="on_surface_emphasis_medium">#99ffffff</color>
+
     <color name="color_primary">#a91991</color>
-    <color name="color_primary_dark">#76005e</color>
+    <color name="color_on_primary">#ffffff</color>
+    <color name="color_primary_dark">#760063</color>
     <color name="color_secondary">#3479c4</color>
+    <color name="color_on_secondary">#ffffff</color>
     <color name="color_activated">#663479c4</color>
     <color name="schedule_time_background">#29000000</color>
     <color name="schedule_time_running_background">@color/color_secondary</color>
-    <color name="shortcut_background">#F5F5F5</color>
+    <color name="light_emphasis_background">#0d000000</color>
 
     <!-- Track types -->
     <color name="track_type_keynote">@color/color_primary</color>
     <color name="track_type_keynote_dark">@color/color_primary_dark</color>
     <color name="track_type_main">#d32f2f</color>
-    <color name="track_type_main_dark">#b71c1c</color>
+    <color name="track_type_main_dark">#9a0007</color>
     <color name="track_type_developer_room">#303f9f</color>
-    <color name="track_type_developer_room_dark">#1a237e</color>
+    <color name="track_type_developer_room_dark">#001970</color>
     <color name="track_type_lightning_talk">#388e3c</color>
-    <color name="track_type_lightning_talk_dark">#1b5e20</color>
+    <color name="track_type_lightning_talk_dark">#00600f</color>
     <color name="track_type_certification_exam">#795548</color>
-    <color name="track_type_certification_exam_dark">#5d4037</color>
+    <color name="track_type_certification_exam_dark">#4b2c20</color>
     <color name="track_type_other">#757575</color>
-    <color name="track_type_other_dark">#616161</color>
+    <color name="track_type_other_dark">#494949</color>
 
     <!-- Room statuses -->
     <color name="room_status_open">#388e3c</color>
