--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,8 @@
     <dimen name="list_item_padding">8dp</dimen>
     <dimen name="content_margin">16dp</dimen>
     <dimen name="schedule_column_width">360dp</dimen>
-    <dimen name="detail_bottom_padding">12dp</dimen>
+    <!-- Bottom app bar size + 12dp for the top part of the FAB -->
+    <dimen name="detail_bottom_padding">68dp</dimen>
     <dimen name="detail_card_view_elevation">6dp</dimen>
     <!-- Enlarge the card view by 6dp left & right and 9dp top & bottom
          to compensate for the compatibility padding of the elevation -->
