--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
 
     <!-- Main theme -->
 
-    <style name="Base.AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
+    <style name="Base.AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <!-- Allows the action mode icons to be shown on top of the Toolbar -->
@@ -12,24 +12,26 @@
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorSecondary">@color/color_secondary</item>
-        <item name="colorOnPrimary">@color/design_default_color_on_primary</item>
-        <item name="colorOnSecondary">@color/design_default_color_on_primary</item>
+        <item name="colorOnPrimary">@color/color_on_primary</item>
+        <item name="colorOnSecondary">@color/color_on_secondary</item>
 
         <item name="activatedBackgroundIndicator">@drawable/activated_background</item>
+        <item name="actionBarTheme">@style/ThemeOverlay.App.ActionBar</item>
         <item name="toolbarStyle">@style/Widget.App.Toolbar</item>
-        <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout.Colored</item>
+        <item name="tabStyle">@style/Widget.MaterialComponents.TabLayout.PrimarySurface</item>
         <item name="recyclerViewStyle">@style/RecyclerView</item>
         <item name="materialHorizontalProgressBarStyle">@style/Widget.MaterialHorizontalProgressBar</item>
     </style>
 
     <style name="AppTheme" parent="Base.AppTheme">
-        <item name="android:selectableItemBackground">?attr/selectableItemBackground</item>
-        <item name="android:listChoiceBackgroundIndicator">?attr/listChoiceBackgroundIndicator</item>
+        <item name="android:windowBackground">?android:colorBackground</item>
+        <item name="android:selectableItemBackground">?selectableItemBackground</item>
+        <item name="android:listChoiceBackgroundIndicator">?listChoiceBackgroundIndicator</item>
     </style>
 
-    <style name="AppTheme.WindowDrawsSystemBarBackgrounds" />
+    <style name="AppTheme.TranslucentStatusBar" />
 
-    <style name="AlertDialogTheme" parent="Theme.MaterialComponents.Light.Dialog.Alert">
+    <style name="AlertDialogTheme" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
 
@@ -40,11 +42,13 @@
         <item name="colorOnSecondary">@color/design_default_color_on_primary</item>
     </style>
 
+    <style name="ThemeOverlay.App.ActionBar" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar" />
+
     <style name="Widget.App.Toolbar" parent="Widget.MaterialComponents.Toolbar">
         <item name="popupTheme">?actionBarPopupTheme</item>
     </style>
 
-    <style name="Widget.App.Toolbar.Primary" parent="Widget.MaterialComponents.Toolbar.Primary">
+    <style name="Widget.App.Toolbar.PrimarySurface" parent="Widget.MaterialComponents.Toolbar.PrimarySurface">
         <item name="android:elevation" tools:ignore="NewApi,PrivateResource">@dimen/design_appbar_elevation</item>
         <item name="android:theme">?actionBarTheme</item>
     </style>
@@ -73,7 +77,7 @@
     <style name="SeparatorLine">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:background">#e5e5e5</item>
+        <item name="android:background">?android:listDivider</item>
     </style>
 
     <style name="Metadata">
