--- a/app/src/main/res/layout/single_event.xml
+++ b/app/src/main/res/layout/single_event.xml
@@ -19,7 +19,7 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <FrameLayout
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
