--- a/app/src/main/res/layout/dialog_room_image.xml
+++ b/app/src/main/res/layout/dialog_room_image.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
-        android:minHeight="56dp"/>
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="2dp"
+        android:minHeight="56dp" />
 
     <ImageView
         android:id="@+id/room_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:contentDescription="@string/room_map"
-        android:paddingBottom="@dimen/content_margin"
-        android:paddingLeft="@dimen/content_margin"
-        android:paddingRight="@dimen/content_margin"/>
+        android:paddingStart="@dimen/content_margin"
+        android:paddingEnd="@dimen/content_margin"
+        android:paddingBottom="@dimen/content_margin" />
 
 </LinearLayout>
